--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
   },
   "scripts": {
     "build": "browserify --debug --transform babelify src/app.jsx --outfile ./bundle.js",
-    "watch": "watchify -d -t babelify src/app.js -o ./bundle.js -v"
+    "watch": "watchify -d -t babelify src/app.js -o ./bundle.js -v",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-register --recursive src/test/"
   },
   "config": {},
-  "Dependencies": {
-  },
+  "Dependencies": {},
   "devDependencies": {
-    "react": "~0.14.7",
-    "react-dom": "^0.14.7",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
@@ -40,9 +38,9 @@
     "gulp-sass": "~2.0.1",
     "gulp-uglify": "1.5.3",
     "gulp-webserver": "^0.9.1",
-    "mocha": "^2.4.5",
-    "mocha-generators": "^1.2.0",
-    "nightmare": "^2.4.0",
+    "mocha": "^2.5.3",
+    "react": "~0.14.7",
+    "react-dom": "^0.14.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "~3.2.2"
