--- a/package.json
+++ b/package.json
@@ -6,45 +6,42 @@
     "react",
     "Usokui"
   ],
-  "homepage": "http://darai0512.github.io/air_poker/",
+  "homepage": "https://darai0512.github.io/AirPoker/",
   "bugs": {
-    "url": "https://github.com/darai0512/air_poker/issues"
+    "url": "https://github.com/darai0512/AirPoker/issues"
   },
   "license": "MIT",
   "author": "darai0512",
   "files": [],
-  "main": "./bundle.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/darai0512/air_poker"
+    "url": "https://github.com/darai0512/AirPoker"
   },
   "scripts": {
-    "build": "browserify --debug --transform babelify src/app.jsx --outfile ./bundle.js",
-    "watch": "watchify -d -t babelify src/app.js -o ./bundle.js -v",
+    "start": "gulp",
+    "lint": "eslint --ignore-path .gitignore -c .eslintrc . --fix",
     "test": "mocha -R nyan --compilers js:babel-register --recursive src/test/"
   },
-  "config": {},
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2016": "^6.0.11",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
-    "browserify": "^10.2.4",
+    "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
     "gulp": "3.9.1",
-    "gulp-sass": "~2.0.1",
-    "gulp-uglify": "1.5.3",
+    "gulp-sass": "~3.1.0",
+    "gulp-uglify": "2.1.2",
     "gulp-webserver": "^0.9.1",
-    "mocha": "^2.5.3",
-    "react": "~0.14.7",
-    "react-dom": "^0.14.7",
-    "vinyl-buffer": "^1.0.0",
+    "mocha": "^3.3.0",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "~3.2.2"
+    "watchify": "~3.9.0"
   },
-  "engines": {},
+  "private": true,
   "//": "os: []",
   "cpu": []
 }
