--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["react", "es2015"],
-  "plugins": ["transform-react-jsx"]
+  "presets": [
+    "react",
+    "es2015"
+  ],
+  "plugins": [
+    "transform-flow-strip-types"
+  ]
 }
