--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,17 @@
 {
-  "extends": "google",
+  "extends": [
+    "airbnb",
+    "prettier"
+  ],
   "env": {
-    "es6": true
-  }
+    "es6": true,
+    "browser": true
+  },
+  "ecmaFeatures": {
+    "jsx": true
+  },
+  "plugins": [
+    "prettier",
+    "react"
+  ]
 }
