--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "AirPoker",
-  "version": "0.0.1",
-  "description": "Originates in Japanese comic of 'Usokui'.",
+  "version": "1.0.0",
+  "description": "Card Game Originated in Japanese comic 'Usokui'.",
   "keywords": [
     "react",
     "Usokui"
@@ -19,25 +19,39 @@
   },
   "scripts": {
     "start": "gulp",
-    "lint": "eslint --ignore-path .gitignore -c .eslintrc . --fix",
-    "test": "mocha -R nyan --compilers js:babel-register --recursive src/test/"
+    "lint": "eslint --ignore-path .gitignore -c .eslintrc src/",
+    "lint:fix": "npm run lint -- --fix",
+    "test": "mocha --compilers js:babel-register --recursive src/**/*.test.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "material-ui": "^0.18.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-tap-event-plugin": "^2.0.1"
+  },
   "devDependencies": {
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-react": "^7.1.0",
+    "flow-bin": "^0.51.0",
+    "flowtype": "^2.0.0",
     "gulp": "3.9.1",
     "gulp-sass": "~3.1.0",
     "gulp-uglify": "2.1.2",
     "gulp-webserver": "^0.9.1",
     "mocha": "^3.3.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "prettier": "^1.5.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "~3.9.0"
   },
