--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.13",
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
     "eslint": "^3.19.0",
@@ -47,6 +48,10 @@
     "flow-bin": "^0.51.0",
     "flowtype": "^2.0.0",
     "gulp": "3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-csso": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-minify-html": "^1.0.6",
     "gulp-sass": "~3.1.0",
     "gulp-uglify": "2.1.2",
     "gulp-webserver": "^0.9.1",
